= v1.1.0

* Switched to Bundler for building/packing of gem.
* Updated README to better support Rails 3.0.0.
* Removed Ruby version requirements.
* Added graceful Rails support and detection.

= v1.0.0

* Upgraded to Ruby 1.8.7 and Ruby on Rails 3.0.0.

= v0.2.0

* Added soft requirements for Ruby 1.8.6 and Rails 2.3.8.

= v0.1.0

* Initial version.