@@ -1,3 +1,3 @@
 module Commenter
-  VERSION = "1.1.0"
+  VERSION = "1.1.1"
 end
